--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,26 @@
+%tittle-style {
+  position: relative;
+  font-size: 1.5em;
+  font-weight: 700; 
+  padding: 10px 0;
+  color: #00bcd4;
+
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 80%;
+    height: 4px;
+    background: #000;
+  }
+}
+
+%base-font {
+  font-size: 1.3em;
+  font-weight: 400;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +28,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @extend %base-font;
 }
 
 code {
