--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,12 @@
     display: grid;
     grid-template-columns: 1fr 4fr;    
 }
+
+.treeselect-demo .p-treeselect {
+    width: 20rem;
+}
+@media screen and (max-width: 640px) {
+    .treeselect-demo .p-treeselect {
+        width: 100%;
+    }
+}
